<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cibercrime"
                android:textSize="@dimen/big_header"
                android:textAlignment="center"/>


            <TextView
                android:id="@+id/title2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/def"
                android:textSize="@dimen/big_header"/>

            <TextView
                android:id="@+id/content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Def_cibercrime"
                android:textSize="@dimen/headers1"/>

            <TextView
                android:id="@+id/title1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoLocalName"
                android:textSize="@dimen/big_header"
                android:textAlignment="center"/>


            <TextView
                android:id="@+id/subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Virus"
                android:textSize="@dimen/headers"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.045"
                tools:layout_editor_absoluteX="0dp"/>

            <TextView
                android:id="@+id/contentVirus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VirusDesc"
                android:textSize="@dimen/headers1"/>

            <TextView
                android:id="@+id/subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Malware"
                android:textSize="@dimen/headers"/>

            <TextView
                android:id="@+id/contentMalware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MalwareDesc"
                android:textSize="@dimen/headers1"/>

            <TextView
                android:id="@+id/subtitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DDoS"
                android:textSize="@dimen/headers"/>

            <TextView
                android:id="@+id/contentDDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DDoS_descr"
                android:textSize="@dimen/headers1"/>

            <TextView
                android:id="@+id/title3"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/categ"
                android:textSize="@dimen/big_header"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Prop"
                android:textSize="@dimen/headers"/>

            <TextView
                android:id="@+id/content3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Prop_conteudo"
                android:textSize="@dimen/headers1"/>

            <TextView
                android:id="@+id/title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ind"
                android:textSize="@dimen/headers"/>

            <TextView
                android:id="@+id/content4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ind_conteudo"
                android:textSize="@dimen/headers"/>

            <TextView
                android:id="@+id/title6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/govern"
                android:textSize="@dimen/headers"/>

            <TextView
                android:id="@+id/content5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/govern_conteudo"
                android:textSize="@dimen/headers1"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>